--- a/src/index.html
+++ b/src/index.html
@@ -11,6 +11,7 @@
     <title>toDoList</title>
     <meta name="description" content="" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <script src="https://kit.fontawesome.com/e24ca22cc7.js"></script>
   </head>
   <body>
     <section id="root"></section>
