update config and modules

--- a/src/index.html
+++ b/src/index.html
@@ -12,6 +12,10 @@
     <meta name="description" content="" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <script src="https://kit.fontawesome.com/e24ca22cc7.js"></script>
+    <link
+      href="https://fonts.googleapis.com/css?family=Roboto:300&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <section id="root"></section>
